# maplib

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  README.md  TODOS.txt  flake.nix
.cargo/: audit.toml  (+1 more)
arrow_python_utils/: Cargo.toml
arrow_python_utils/src/: to_python.rs  to_rust.rs
lib/chrontext/: Cargo.toml
lib/chrontext/src/: engine.rs  errors.rs  lib.rs
lib/cimxml/: Cargo.toml
lib/cimxml/src/: export.rs  lib.rs
lib/datalog/: Cargo.toml
lib/datalog/src/: ast.rs  inference.rs  lib.rs  parser.rs  python.rs
lib/fts/: Cargo.toml
lib/fts/src/: lib.rs
lib/maplib/: Cargo.toml
lib/maplib/src/: ast.rs  errors.rs  lib.rs  mapping.rs  model.rs  parsing.rs  prefixes.rs  templates.rs
lib/maplib/tests/: test_stottr.rs
lib/pydf_io/: Cargo.toml  LICENSE  README.md
lib/pydf_io/src/: lib.rs  to_python.rs  to_rust.rs
lib/query_processing/: Cargo.toml  README.md
lib/query_processing/src/: aggregates.rs  cats.rs  constants.rs  errors.rs  exists_helper.rs  expressions.rs  find_query_variables.rs  graph_patterns.rs  lib.rs  pushdowns.rs  type_constraints.rs  udf.rs
lib/representation/: Cargo.toml  README.md
lib/representation/src/: base_rdf_type.rs  cats.rs  column_builder.rs  constants.rs  dataset.rs  debug.rs  df_to_python.rs  errors.rs  formatting.rs  iri.rs  iri_split.rs  lib.rs  literals.rs  multitype.rs  polar_cats.rs  polars_to_rdf.rs  prefixes.rs  python.rs  python_df_to_rust.rs  query_context.rs  rdf_state.rs  rdf_to_polars.rs  rdf_type.rs  result.rs  series_builder.rs  solution_mapping.rs  solution_mappings_builder.rs  subtypes.rs
lib/shacl/: Cargo.toml
lib/shacl/src/: errors.rs  lib.rs  python.rs  storage.rs
lib/spargebra/: Cargo.toml  README.md
lib/spargebra/src/: algebra.rs  lib.rs  parser.rs  query.rs  query_context.rs  remove_sugar.rs  treehouse.rs  update.rs
lib/templates/: Cargo.toml
lib/templates/src/: as_rdf.rs  ast.rs  compatible.rs  constants.rs  dataset.rs  document.rs  lib.rs  parsing.rs  python.rs  resolver.rs  subtypes.rs  subtypes_ext.rs
lib/triplestore/: Cargo.toml
lib/triplestore/src/: add_triples.rs  cats.rs  conversion.rs  dblf.rs  errors.rs  indexing.rs  io_funcs.rs  jelly.rs  lib.rs  map_df.rs  map_json.rs  map_xml.rs  native_parquet_write.rs  ntriples_write.rs  query_solutions.rs  rdfs_inferencing.rs  serialization.rs  sparql.rs  storage.rs  triples_read.rs  triples_write.rs
lib/virtualization/: Cargo.toml
lib/virtualization/src/: lib.rs  python.rs
lib/virtualized_query/: Cargo.toml
lib/virtualized_query/src/: lib.rs  pushdown_setting.rs  python.rs
maplib/: Cargo.toml
maplib/src/: ast.rs  constants.rs  document.rs  errors.rs  lib.rs  mapping.rs  parsing.rs  resolver.rs  templates.rs
maplib/src/mapping/: constant_terms.rs  default.rs  errors.rs  validation_inference.rs
maplib/src/parsing/: errors.rs  nom_parsing.rs  parser_test.rs  parsing_ast.rs
maplib/src/templates/: errors.rs
maplib/tests/: test_stottr.rs  utils.rs
parquet_io/: Cargo.toml
parquet_io/src/: lib.rs
py_maplib/: .gitignore  API.md  Cargo.toml  README.md  pyproject.toml  requirements.txt
py_maplib/doc/: rds_mapping.ipynb
py_maplib/maplib/: .gitignore  __init__.py  __init__.pyi  add_triples.py  adding_triples.py  graph_explorer  maplib.pyi
py_maplib/maplib/template_generator/: __init__.py  generate.py  ordering.py
py_maplib/python/maplib/: __init__.py  _maplib.pyi  functions.py
py_maplib/src/: error.rs  lib.rs  mutexes.rs  py_indexing_options.rs  py_model.rs  shacl.rs
py_maplib/tests/: .gitignore  disk.py  multi_value_different_types.parquet  out.ttl  requirements.txt  test_aggregation_count_zero.py  test_basics.py  test_blank_nodes.py  test_blank_nodes_multi.py  test_blank_query_template.py  test_compressed_iri_issue.py  test_custom_functions.py  test_data_validation.py  test_exceptions.py  test_garbage_collection.py  test_gtfs_benchmark.py  test_hdt.py  test_integration.py  test_issue_48_bad_ints.py  test_jelly.py  test_jelly_benchmark.py  test_json.py  test_jsonld.py  test_map_df.py  test_multi_expressions.py  test_named_graphs.py  test_pizza_example.py  test_pretty_turtle.py  test_programmatic_api.py  test_programmatic_pizza_example.py  test_rdf_parser.py  test_rdfs_inference.py  test_read.py  test_read_write.py  test_resolve_predicate.py  test_serialize.py  test_stottr.py  test_templates_to_graph.py  test_udfs.py  test_validate_iris.py  (+3 more)
py_maplib/tests/testdata/: generate_iri_all_strings.parquet  iterated_property_path_constant_object_query.csv  iterated_property_path_constant_subject_query.csv  iterated_property_path_query.csv  iterated_property_path_query_with_bug.csv  larger_ordered_query.csv  larger_query.csv  multi_concat.csv  multi_datatype_join_query.csv  multi_datatype_join_query_two_vars.csv  multi_datatype_leftjoin_query.csv  multi_datatype_query.csv  multi_datatype_query.parquet  multi_datatype_query_sorting.csv  multi_datatype_union_query.csv  multi_datatype_union_query_native_df.parquet  multi_datatype_union_sort_desc1_query.csv  multi_datatype_union_sort_query.csv  multi_many_comp.csv  output.csv  output.jelly  pretty_turtle_write_multi_provided_expected.csv  property_path_query.csv  read_lists.ttl  read_ntriples.csv  read_ntriples.nt  read_ntriples2.csv  read_ntriples_prefix_escaped.nt  read_ntriples_utf8_bom.nt  read_nums.ttl  serialization1.ttl  serialization2.ttl  simple_construct_query_nothing.csv  simple_construct_query_something.csv  simple_insert_query_nothing.csv  simple_insert_query_something.csv  simple_property_path_query.csv  simple_query.csv  stringfuncs.csv  templates.ttl  (+2 more)
representation/: Cargo.toml
representation/src/: lib.rs  literals.rs  multitype.rs  solution_mapping.rs
triplestore/: Cargo.toml
triplestore/src/: constants.rs  conversion.rs  errors.rs  export_triples.rs  io_funcs.rs  lib.rs  native_parquet_write.rs  ntriples_write.rs  rdfs_inferencing.rs  sparql.rs  triples_read.rs
triplestore/src/sparql/: errors.rs  lazy_aggregate.rs  lazy_expressions.rs  lazy_graph_patterns.rs  lazy_order.rs  multitype.rs  query_context.rs  solution_mapping.rs  sparql_to_polars.rs
(+226 files in other folders)
