[workspace]
resolver = "2"
members = [
    "lib/utils",
    "lib/representation",
    "lib/maplib",
    "lib/triplestore",
    "lib/file_io",
    "lib/pydf_io",
    "lib/query_processing",
    "lib/spargebra",
    "lib/shacl",
    "lib/fts",
    "lib/datalog",
    "lib/cimxml",
    "py_maplib",
]

[workspace.package]
rust-version = "1.88.0"

[workspace.dependencies]
pyo3 = {version = "0.24.1", features = ["py-clone"] }
pyo3-log = {version = "0.12.3" }
polars = { version = "0.48.1", features = ["nightly", "streaming", "performant", "cse", "fmt"], default-features = false }
polars-core = { version = "0.48.1", default-features = false }
rayon = "1.10.0"
regex = "1.11.1"
oxrdf = { version="0.2.4" }
oxrdfio = { version = "0.1.7" }
oxttl = { version="0.1.7" }
oxiri = "0.2.11"
sparesults = "0.2.4"
oxsdatatypes = "0.2.2"
env_logger = "0.11.8"
log = "0.4.27"
chrono = "0.4.41"
chrono-tz = "0.10.3"
uuid = { version = "1.16.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
thiserror = "2.0.12"
nom = { version = "7.1.3" }
serde = { version = "1.0.219" }
peg = "0.8"
rand = "0.9.1"
oxilangtag = "0.1.5"
fundu = "2.0.1"
memmap2 = "0.9.5"
sprs = "0.11.3"
walkdir = "2.5.0"

itoa = "1.0.15"
ryu = "1.0.20"

#dev-dependencies
rstest = "0.25.0"
serial_test = "3.2.0"

[patch.crates-io]
polars = { git = 'https://github.com/pola-rs/polars', rev="b9dd8cdbd6e6ec8373110536955ed5940b9460ec" }
polars-core = { git = 'https://github.com/pola-rs/polars', rev="b9dd8cdbd6e6ec8373110536955ed5940b9460ec" }
