[workspace]
resolver = "2"
members = [
    "lib/utils",
    "lib/representation",
    "lib/maplib",
    "lib/triplestore",
    "lib/file_io",
    "lib/pydf_io",
    "lib/query_processing",
    "lib/spargebra",
    "lib/shacl",
    "lib/fts",
    "lib/datalog",
    "lib/cimxml_export",
    "lib/cimxml_import",
    "py_maplib",
]

[workspace.package]
rust-version = "1.88.0"

[workspace.dependencies]
pyo3 = {version = "0.25", features = ["py-clone"] }
#Moment is there to work around a feature toggle bug
polars = { version = "0.52.0", features = ["simd", "nightly", "new_streaming", "performant", "cse", "fmt", "parquet", "moment", "timezones"] }
polars-core = { version = "0.52.0" }
rayon = "1.10.0"
regex = "1.11.1"
oxrdf = { version = "0.2.4" }
oxrdfio = { version = "0.1.7" }
oxttl = { version= "0.1.7" }
oxiri = "0.2.11"
sparesults = "0.2.4"
oxsdatatypes = "0.2.2"
chrono = "0.4.41"
chrono-tz = "0.10.3"
uuid = { version = "1.16.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
thiserror = "2.0.12"
peg = "0.8"
rand = "0.9.1"
oxilangtag = "0.1.5"
fundu = "2.0.1"
memmap2 = "0.9.5"
sprs = "0.11.3"
walkdir = "2.5.0"
aho-corasick = "1.1.4"
simd-json = { version = "0.17.0", features = ["serde_json"] }
serde_json = {version = "1.0.149"}

tracing = { version = "0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
tracing-log = "0.2"

itoa = "1.0.15"
ryu = "1.0.20"
#dev-dependencies
rstest = "0.25.0"
serial_test = "3.2.0"
nohash-hasher = "0.2.0"

[patch.crates-io]
#polars = { git = 'https://github.com/pola-rs/polars', rev="665722ac3f3664c589c4827208d173cc16f0ec68" }
#polars-core = { git = 'https://github.com/pola-rs/polars', rev="665722ac3f3664c589c4827208d173cc16f0ec68" }
