[workspace]
resolver = "2"
members = [
    "lib/in_memory",
    "lib/disk",
    "lib/utils",
    "lib/representation",
    "lib/maplib",
    "lib/triplestore",
    "lib/file_io",
    "lib/query_processing",
    "lib/spargebra",
    "lib/shacl",
    "lib/fts",
    "lib/datalog",
    "lib/cimxml_export",
    "lib/cimxml_import",
    "py_maplib",
]

[workspace.package]
rust-version = "1.88.0"
edition = "2021"

[workspace.dependencies]
pyo3 = {version = "0.28.2", features = ["py-clone"] }
#Moment is there to work around a feature toggle bug
polars = { version = "0.53.0", features = [
    "simd",
    "nightly",
    "new_streaming",
    "performant",
    "cse",
    "fmt",
    "parquet",
    "moment",
    "timezones"
] }
polars-core = { version = "0.53.0" }
rayon = "1.10.0"
regex = "1.11.1"
oxrdf = { version = "0.3.3" }
oxrdfio = { version = "0.2.4" }
oxttl = { version= "0.2.3" }
oxjsonld = {version = "0.2.4"}
oxiri = "0.2.11"
sparesults = "0.3.3"
oxsdatatypes = "0.2.2"
chrono = "0.4.41"
chrono-tz = "0.10.3"
uuid = { version = "1.16.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
thiserror = "2.0.12"
peg = "0.8"
rand = "0.9.1"
oxilangtag = "0.1.5"
fundu = "2.0.1"
memmap2 = "0.9.5"
sprs = "0.11.3"
walkdir = "2.5.0"
aho-corasick = "1.1.4"
simd-json = { version = "0.17.0", features = ["serde_json"] }
serde_json = {version = "1.0.149"}
uri_encode = "1.0.4"
md-5 = "0.10.6"
sha1 = "0.10.6"
hex = "0.4.3"
memchr = "2.8.0"

tracing = { version = "0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
tracing-log = "0.2"

itoa = "1.0.15"
ryu = "1.0.20"
#dev-dependencies
nohash-hasher = "0.2.0"
arrow = "56"
ordered-float = "5.1.0"
rust_decimal = "1.41.0"

[patch.crates-io]
#polars = { git = 'https://github.com/pola-rs/polars', rev="665722ac3f3664c589c4827208d173cc16f0ec68" }
#polars-core = { git = 'https://github.com/pola-rs/polars', rev="665722ac3f3664c589c4827208d173cc16f0ec68" }
