[package]
name = "maplib"
version = "0.5.1"
edition = "2021"

[dependencies]
representation = {path="../representation"}
triplestore = {path="../triplestore"}
parquet_io = {path="../parquet_io"}
shacl = {path="../shacl"}

rayon = "1.6.0"
nom={version="7.1.3", features=["alloc"]}
sprs = {version="0.11.0", features=["rayon"]}
spargebra = "0.2.2"
oxrdf = "0.1.0"
polars = {version="0.35.4", features=["semi_anti_join", "abs", "round_series", "lazy", "concat_str", "is_in", "dtype-full", "strings", "horizontal_concat", "rows", "timezones", "polars-time", "temporal", "list_eval", "partition_by", "parquet", "cse", "nightly", "performant"] }
unic-char-range = "0.9.0"
log="0.4.19"
rio_turtle = "0.8.4"
rio_api = "0.8.4"
polars-utils = "0.35.4"
polars-core = "0.35.4"
chrono = "0.4"
chrono-tz = "0.8"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]}
thiserror="1.0.31"
env_logger = "0.10.0"

[dev-dependencies]
rstest = "0.18.2"
serial_test = "2.0.0"
