[package]
name = "parquet_io"
version = "0.4.8"
edition = "2021"

[dependencies]
polars = {version="0.31.1", features=["parquet"] }
polars-core = "0.31.1"
thiserror="1.0.31"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]}