[package]
name = "py_maplib"
version = "0.15.13"
edition = "2021"

[dependencies]
maplib = { path = "../lib/maplib" }
triplestore = { path = "../lib/triplestore" }
representation = { path = "../lib/representation" }
shacl = { path = "../lib/shacl" }
pydf_io = { path = "../lib/pydf_io" }
report_mapping = {path = "../lib/report_mapping"}
templates = {path= "../lib/templates"}

pyo3.workspace = true
pyo3-log.workspace = true
oxrdf.workspace = true
oxrdfio.workspace = true
thiserror.workspace = true
polars = { workspace = true, features = [
    "nightly", "performant", "cse",
    "dtype-array", "dtype-categorical", "dtype-date",
    "dtype-datetime", "dtype-decimal", "dtype-duration",
    "dtype-i8", "dtype-i16", "dtype-struct",
    "dtype-time", "dtype-u8", "dtype-u16"], default-features = false }
log.workspace = true

[lib]
name = "maplib"
crate-type = ["cdylib"]

# Conditional dependency specification of mimalloc and jemallocator copied from: https://github.com/pola-rs/polars/blob/main/py-polars/Cargo.toml
# Licence in /licensing/POLARS_LICENSE
[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.4", features = ["disable_initial_exec_tls"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs", "rdf-star"))'] }
