[project]
name = "maplib"
description = "Dataframe-based interactive knowledge graph construction"
dependencies = ["polars>=0.20.13", "pyarrow>=7.0.0"]
readme = "README.md"
authors = [{name = "Magnus Bakken", email = "magnus@data-treehouse.com" }]
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["rdf", "graph", "dataframe", "sparql", "ottr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/DataTreehouse/maplib"
Documentation = "https://datatreehouse.github.io/maplib/maplib/maplib.html"
Repository = "https://github.com/DataTreehouse/maplib"
Changelog = "https://github.com/DataTreehouse/maplib/releases"

[project.optional-dependencies]
explorer = ["fastapi[standard]>=0.115"]

[build-system]
requires = ["maturin==1.7.4"]
build-backend = "maturin"