[package]
name = "representation"
version = "0.4.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxrdf = {version = "0.1.7", features = ["oxsdatatypes"]}
polars-core = "0.36.2"
chrono = "0.4"
spargebra = "0.2.8"
bigdecimal = "0.4.1"
polars-arrow = "0.36.2"
thiserror = "1.0.51"