[package]
name = "representation"
version = "0.4.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxrdf = {version = "0.1.7", features = ["oxsdatatypes"]}
polars = {version="0.35.4", features=["performant", "lazy", "dtype-full", "timezones", "polars-time"] }
polars-core = "0.35.4"
chrono = "0.4"
spargebra = "0.2.8"
bigdecimal = "0.4.1"
polars-arrow = "0.35.4"
thiserror = "1.0.51"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]}