[package]
name = "cimxml"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
pyo3 = [ "dep:pyo3", "triplestore/pyo3" ]

[dependencies]
representation = {path ="../representation"}
triplestore = {path="../triplestore"}
thiserror.workspace = true
oxrdf.workspace = true

pyo3 = { workspace = true, optional = true }
