[package]
name = "fts"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
representation = {path="../representation"}
spargebra = { path="../spargebra" }
query_processing = {path="../query_processing"}

oxrdf.workspace = true
thiserror.workspace = true
polars.workspace = true
