[package]
name = "maplib"
version = "0.6.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
templates = {path = "../templates"}
triplestore = { path = "../triplestore" }
shacl = { path = "../shacl" }
representation = { path = "../representation" }
datalog = {path = "../datalog"}
cimxml = {path = "../cimxml"}

rayon = { workspace = true }
oxrdf = { workspace = true }
oxiri = { workspace = true }
polars = { workspace = true, default-features = false, features = [
    "semi_anti_join", "abs", "round_series", "lazy", "concat_str", "is_in", "dtype-full", "strings", "rows",
    "timezones", "polars-time", "temporal", "list_eval", "partition_by", "parquet", "cse", "nightly", "performant",
] }
log = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
env_logger = { workspace = true }
oxrdfio = { workspace = true }

[dev-dependencies]
rstest.workspace=true
serial_test.workspace = true