[package]
name = "maplib"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true

[features]
pyo3 = [ "dep:pyo3", "triplestore/pyo3", "shacl/pyo3", "datalog/pyo3", "cimxml_export/pyo3" ]

[dependencies]
templates = {path = "../templates"}
triplestore = { path = "../triplestore" }
shacl = { path = "../shacl" }
representation = { path = "../representation" }
datalog = {path = "../datalog"}
cimxml_export = {path = "../cimxml_export"}
query_processing = {path ="../query_processing"}

rayon = { workspace = true }
oxrdf = { workspace = true }
oxiri = { workspace = true }
polars = { workspace = true,  features = [
    "semi_anti_join", "abs", "round_series", "lazy", "concat_str", "is_in", "dtype-full", "strings", "rows",
    "timezones", "polars-time", "temporal", "list_eval", "partition_by", "parquet", "cse", "nightly", "performant",
] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = { workspace = true }
oxrdfio = { workspace = true }
tracing = { workspace = true }

pyo3 = { workspace = true, optional = true }

