[package]
name = "pydf_io"
version = "0.7.6"
edition = "2021"

[dependencies]
representation = {path = "../representation"}

pyo3 = {workspace=true, features = ["extension-module"]}
polars = {workspace=true}
polars-core = {workspace=true, features=["dtype-array", "dtype-categorical", "dtype-date", "dtype-datetime",
    "dtype-decimal", "dtype-duration", "dtype-i8", "dtype-i16", "dtype-struct", "dtype-time", "dtype-u8", "dtype-u16"]}
thiserror.workspace = true
