[package]
name = "pydf_io"
version = "0.7.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
representation = {path = "../representation"}

pyo3 = {workspace=true, features = ["extension-module"]}
polars = {workspace=true}
polars-core = {workspace=true, features=["dtype-array", "dtype-date", "dtype-datetime",
    "dtype-decimal", "dtype-duration", "dtype-i8", "dtype-i16", "dtype-struct", "dtype-time", "dtype-u8", "dtype-u16"] }
thiserror.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs", "rdf-star"))'] }
