[package]
name = "representation"
version = "0.6.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spargebra = {path = "../spargebra"}

log.workspace = true
oxrdf = {workspace = true, features = ["oxsdatatypes"]}
polars = {workspace = true, features=["performant", "lazy", "dtype-full", "timezones", "polars-time", "partition_by", "cross_join", "strings"] }
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
uuid.workspace = true
pyo3 = {version = "0.21.2"}
serde = {workspace = true, features = ["derive"]}
