[package]
name = "representation"
version = "0.6.10"
edition.workspace = true
rust-version.workspace = true

[features]
pyo3 = [ "utils/pyo3" ]

[dependencies]
utils = { path = "../utils" }
spargebra = {path = "../spargebra"}

tracing.workspace = true
oxrdf = {workspace = true, features = ["oxsdatatypes"]}
polars = {workspace = true, features=["cum_agg","diagonal_concat", "merge_sorted", "performant", "new_streaming", "lazy", "dtype-full", "timezones", "polars-time", "partition_by", "strings"] }
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
pyo3 = {workspace = true, features = ["chrono-tz", "chrono"]}
oxsdatatypes.workspace = true
rayon.workspace = true
nohash-hasher.workspace = true
uuid.workspace = true
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs", "rdf-star"))'] }
