[package]
name = "templates"
version = "0.1.0"
edition = "2021"

[dependencies]
representation = { path = "../representation" }

oxrdf = { workspace = true }
unic-char-range = "0.9.0"
log = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true, features = ["alloc"] }
pyo3.workspace = true