[package]
name = "templates"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
representation = { path = "../representation" }
spargebra = {path = "../spargebra"}

oxrdf = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pyo3.workspace = true
walkdir.workspace = true
oxiri.workspace = true
oxilangtag.workspace = true
peg = {workspace = true }
