[package]
name = "triplestore"
version = "0.5.0"
edition = "2021"
rust-version.workspace = true

[features]
pyo3 = [ "dep:pyo3", "utils/pyo3" ]

[dependencies]
utils = { path = "../utils" }
query_processing = { path = "../query_processing" }
representation = { path = "../representation" }
file_io = { path = "../file_io" }
spargebra = { path = "../spargebra" }
fts = {path ="../fts"}

rayon.workspace = true
sprs = { workspace = true, features = ["multi_thread"] }
oxrdf.workspace = true
polars = { workspace = true, features = [
    "ipc", "range", "rank",
    "is_unique","merge_sorted", "new_streaming", "zip_with", "nightly", "performant", "cse", "semi_anti_join", "abs", "round_series", "lazy", "concat_str", "is_in",
    "dtype-full", "strings", "rows", "timezones", "polars-time", "temporal", "list_eval", "partition_by", "parquet",
    "diagonal_concat", "cum_agg"] }
polars-core = {workspace = true }
uuid.workspace = true
thiserror.workspace = true
oxrdfio.workspace = true
oxttl.workspace = true
memmap2.workspace = true
sparesults.workspace = true
tracing.workspace = true
aho-corasick.workspace = true

pyo3 = { workspace = true, optional = true }

itoa.workspace = true
ryu.workspace = true
